# Heidelberg_2014

./: .gitignore  Auswertung Lysozym-preassays.ipynb  Boinc.java  BoincAPIWrapper.h  BoincAPIWrapper.java  CMakeLists.txt  Linkersoftware-lysozym.ipynb  Linkersoftware.ipynb  Linkersoftware.py  LowLvlBoincWrapper.h  LowLvlBoincWrapper.java  MainTester.java  Makefile  README  README.md  Testnotebook.ipynb  boincAPIWrapper.cpp  circAssimilator.py  circ_modeller.c  circ_modeller.h  config.h.in  construct_circ_protein.py  cythontest.ipynb  file_signer.c  from_database_to_linker_eval_work.py  from_database_to_linker_work.py  from_database_to_modeller_work.py  from_database_to_work_for_linker_boinc.py  from_database_to_work_for_linker_boinc_nils.py  from_database_to_work_for_modeller_boinc.py  functions.py  howto.txt  igemathome_database.py  keys.h  linkerAssimilator.py  linker_generator.c  linker_generator.py  linux.c  linux_functions.c  linux_functions.h  (+10 more)
.ipynb_checkpoints/: Linkersoftware-checkpoint.ipynb
.meteor/: packages
CRAUT/: README.md
OD/: lysozyme_plate_auswertung.ipynb
boinc-python-scripts/: assimilator.py  create_usable_database_from_download_pdbs.ipynb  from_database_to_linker_work.py
boinc-screensaver/: screensaver-v2.html  screensaver.css
boinc-screensaver/images/2013Heidelberg/: Thumbs.db
boincjavaexamples/: .gitignore
boincjavaexamples/src/: MainTester.java
boincjavaexamples/src/org/igemathome/examples/: CaseConverterExample.java  SimpleAlignmentExample.java
boincjavawrapper/: .gitignore
boincjavawrapper/runtime/: README
boincjavawrapper/src/cpp/libboincAPIWrapper/: boincAPIWrapper.cpp
boincjavawrapper/src/java/main/: Makefile
circ_modeller-rebase/: windows_functions.h
circ_modeller-rebase/python_modelling/example/: configfile.csv
client/: classes.html  classes.js  doc.css  experiment.html  experiment.js  experimentList.html  experimentList.js  main.html  main.js  newProtocol.html  newProtocol.js  options.html  options.js  performProtocol.html  performProtocol.js  protocol.html  protocol.js  protocolList.html  protocolList.js  protocols.html  protocols.js  supplies.html  supplies.js  suppliesList.html  suppliesList.js  types.html  types.js  versioning.html  versioning.js
client/lib/: ko.dateBinding.js  main.ko.dateBinding.js  main.ko.typeahead.js  typeaheadjs.css
client/lib/clockpicker/: clockpicker.css  clockpicker.js
client/lib/datepicker/: bootstrap-datepicker.js
cmake/: FindCrypto.cmake  FindGLIB2.cmake  c_flag_overrides.cmake
deploy/: package.cfg.example  package.example.cfg
deploy/app/: stderr.txt
documentation/.meteor/: packages
documentation/client/: doc.css  experiment.html  experiment.js  experimentList.html  experimentList.js  main.html  main.js  options.html  protocol.js  supplies.js  types.html  types.js
documentation/client/lib/: datepicker.options.js  typeaheadjs.css
documentation/lib/: cascadingUpdate.js  experiment.js  knockout.meteor.serverFix.js  ko.internalAPI.js  pod.js  protocol.js  supply.js  type.js
documentation/server/: search.js
file_signer/: CMakeLists.txt
files/: datalys.h5  filename.json.REMOVED.git-id  save.p.REMOVED.git-id  savedritteeins.p.REMOVED.git-id  savedrittezwei.p.REMOVED.git-id  saveerste.p  saveersteeins.p.REMOVED.git-id  saveerstezwei.p.REMOVED.git-id  savepoints.p  savepointslysozym.p  savezweiteeins.p.REMOVED.git-id  savezweitezwei.p.REMOVED.git-id
for_distribution/: software_for_distribution.py
for_wiki/: Linkersoftware.py
for_wiki/linkersoft_bundle/: linker_gen.REMOVED.git-id  linker_generator.py
igem-wiki-resize-and-upload-script/: resizeandupload.py
images/: Thumbs.db  bg-igem@home.xcf
images/2013Freiburg/: Thumbs.db
lib/: cascadingUpdate.js  collections.js  experiment.js  experiments.js  manager.js  protocol.js  protocols.js  router.js  supplies.js  supply.js  type.js  types.js  util.js
linker_generator/: .gitignore  CMakeLists.txt  windows_functions.c  windows_functions.h
linkerconstruction/: what_and_why_software_does.txt
linkerconstruction/CRAUT/linkersoft_bundle/: README  boinc_temporary_exit  linker_generator.py
linkerconstruction/for_wiki/linkersoft_bundle/: README~
linkerevaluator/src/org/igemathome/linker/evaluator/: AtomTransformer.java  Helix.java  LinkerMotive.java
linkerevaluator/src/org/igemathome/linker/evaluator/test/: ParsingTest.java
lysozyme_plate_auswertungen/: functions.py
lysozyme_plate_auswertungen/Fluos/: fluo_plate_auswertung.ipynb
lysozyme_plate_auswertungen/OD/: lysozyme_plate_auswertung.ipynb
python/: linker_generator.py
python_modelling/: construct_circ_protein.py  python_modelling.py
server/: publish.js  search.js  user.js
src/: IOPractise.java
src/cpp/launcher/: Makefile  launcher.c
src/cpp/libboincAPIWrapper/: BoincAPIWrapper.h  Makefile  boincAPIWrapper.cpp
src/java/main/org/igemathome/: Boinc.java
src/java/main/org/igemathome/boinc/: Boinc.java  Makefile
src/java/main/org/igemathome/boinc/wrapper/: BoincAPIWrapper.java
src/java/main/org/igemathome/wrapper/: BoincAPIWrapper.java
src/java/org/igemathome/boinc/: Boinc.java  Makefile
src/java/org/igemathome/boinc/wrapper/: BoincAPIWrapper.java
src/java/test/: MainTester.java  Makefile
src/java/test/org/igemathome/examples/: CaseConverterExample.java  HelloWorldExample.java  SimpleAlignmentExample.java  SmithWaterman.java
src/org.igemathome.examples/: SimpleAlignmentExample.java
src/org/igemathome/examples/: HelloWorldExample.java  JustATest.java  SmithWaterman.java
src/org/igemathome/linker/evaluator/: FlexibleRegion.java  Linker.java  Main.java
src/org/igemathome/linker/evaluator/test/: UnzipTest.java
